--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 
 resources:
   - billing.yaml
+  - certificate-secret.yaml
   - frontend.yaml
   - ingress-class.yaml
   - ingress-params.yaml
@@ -13,12 +14,13 @@ resources:
 
 replacements:
   - source:
-      kind: ConfigMap
-      name: terraform-outputs
-      fieldPath: data.certificate_arn
+      kind: Secret
+      name: certificate-arn
+      fieldPath: data.arn
     targets:
       - select:
           kind: Ingress
           name: coffee-ingress
         fieldPaths:
           - metadata.annotations.[alb.ingress.kubernetes.io/certificate-arn]
+
