--- a/services/billing/requirements.txt
+++ b/services/billing/requirements.txt
@@ -2,3 +2,9 @@ fastapi==0.104.1
 uvicorn==0.24.0
 mysql-connector-python==8.2.0
 pydantic==2.5.0
+opentelemetry-api
+opentelemetry-sdk
+opentelemetry-exporter-otlp
+opentelemetry-instrumentation-fastapi
+opentelemetry-instrumentation-httpx
+
