--- a/services/inventory/requirements.txt
+++ b/services/inventory/requirements.txt
@@ -3,3 +3,9 @@ uvicorn==0.24.0
 mysql-connector-python==8.2.0
 httpx==0.25.2
 pydantic==2.5.0
+opentelemetry-api
+opentelemetry-sdk
+opentelemetry-exporter-otlp
+opentelemetry-instrumentation-fastapi
+opentelemetry-instrumentation-httpx
+
