--- a/services/inventory/Dockerfile
+++ b/services/inventory/Dockerfile
@@ -1,12 +1,12 @@
-FROM python:3.11-slim
+FROM python:3.11
+
 
 WORKDIR /app
 
 COPY requirements.txt .
 
-RUN apt-get update && apt-get install -y gcc g++ && \
-    pip install --no-cache-dir -r requirements.txt && \
-    apt-get remove -y gcc g++ && apt-get autoremove -y && apt-get clean
+RUN pip install --no-cache-dir -r requirements.txt
+
 
 
 COPY main.py .
