--- a/services/billing/requirements.txt
+++ b/services/billing/requirements.txt
@@ -1,7 +1,8 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-mysql-connector-python==8.2.0
-pydantic==2.5.0
+fastapi
+uvicorn
+mysql-connector-python
+pydantic
+
 opentelemetry-api
 opentelemetry-sdk
 opentelemetry-exporter-otlp
