--- a/k8s/base/mysql.yaml
+++ b/k8s/base/mysql.yaml
@@ -63,6 +63,8 @@ kind: Deployment
 metadata:
   name: mysql
 spec:
+  revisionHistoryLimit: 2
+  replicas: 2
   selector:
     matchLabels:
       app: mysql
