--- a/services/billing/requirements.txt
+++ b/services/billing/requirements.txt
@@ -8,4 +8,5 @@ opentelemetry-sdk
 opentelemetry-exporter-otlp
 opentelemetry-instrumentation-fastapi
 opentelemetry-instrumentation-httpx
+opentelemetry-instrumentation-mysql
 
