--- a/services/order/requirements.txt
+++ b/services/order/requirements.txt
@@ -9,4 +9,5 @@ opentelemetry-sdk
 opentelemetry-exporter-otlp
 opentelemetry-instrumentation-fastapi
 opentelemetry-instrumentation-httpx
+opentelemetry-instrumentation-mysql
 
