--- a/k8s/overlays/local/kustomization.yaml
+++ b/k8s/overlays/local/kustomization.yaml
@@ -5,6 +5,8 @@ resources:
   - ../../base
   - ingress.yaml
   - argocd-ingress.yaml
+  - argocd-cm.yaml
+  - argocd-rbac-cm.yaml
 
 patches:
   # Frontend
