fix: rename argocd account to remove @

--- a/k8s/overlays/local/argocd-rbac-cm.yaml
+++ b/k8s/overlays/local/argocd-rbac-cm.yaml
@@ -16,5 +16,5 @@ data:
     # role:admin 정의 (모든 권한 허용)
     p, role:admin, *, *, */*, allow
     
-    # jskwon@gsitm.com 계정에게 role:admin 부여
-    g, jskwon@gsitm.com, role:admin
+    # jskwon 계정에게 role:admin 부여
+    g, jskwon, role:admin
