--- a/k8s/overlays/local/argocd-cm.yaml
+++ b/k8s/overlays/local/argocd-cm.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: argocd
 data:
   # developer 사용자 추가 (apiKey, login 권한 부여)
-  accounts.jskwon@gsitm.com: apiKey, login
+  accounts.jskwon: apiKey, login
   accounts.developer: apiKey, login
